@@ -1,61 +1,50 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.plugins;
 
 import com.intellij.ide.plugins.newui.PluginDtoModelBuilderFactory;
 import com.intellij.ide.plugins.newui.PluginUiModel;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.util.BuildNumber;
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.testFramework.ApplicationRule;
-import com.intellij.testFramework.rules.TempDirectory;
 import org.intellij.lang.annotations.Language;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
-import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 import static com.intellij.ide.plugins.BrokenPluginFileKt.updateBrokenPlugins;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class RepositoryHelperTest {
-  @Rule
-  public TempDirectory tempDir = new TempDirectory();
+class RepositoryHelperTest {
+  @TempDir Path tempDir;
 
-  @ClassRule
-  public static final ApplicationRule appRule = new ApplicationRule();
-
-  @Test(expected = IOException.class)
-  public void testEmpty() throws IOException {
-    loadPlugins("");
+  @Test void testEmpty() {
+    assertThrows(IOException.class, () -> {
+      loadPlugins("");
+    });
   }
 
-  @Test
-  public void testWrongFormat() throws IOException {
-    List<PluginNode> list = loadPlugins("<?xml version=\"1.0\" encoding=\"UTF-8\"?><root/>");
+  @Test void testWrongFormat() throws IOException {
+    var list = loadPlugins("<?xml version=\"1.0\" encoding=\"UTF-8\"?><root/>");
     assertTrue(list.isEmpty());
   }
 
-  @Test(expected = IOException.class)
-  public void testFormatErrors() throws IOException {
-    List<PluginNode> list = loadPlugins("<?xml version=\"1.0\" encoding=\"UTF-8\"?><id>42</id>");
-    assertTrue(list.isEmpty());
+  @Test void testFormatErrors() {
+    assertThrows(IOException.class, () -> {
+      loadPlugins("<?xml version=\"1.0\" encoding=\"UTF-8\"?><id>42</id>");
+    });
   }
 
-  @Test
-  public void testFullFormat() throws IOException {
-    List<PluginNode> list = loadPlugins(
-      """
+  @Test void testFullFormat() throws IOException {
+    var list = loadPlugins("""
         <?xml version="1.0" encoding="UTF-8"?>
         <plugin-repository>
           <ff>"J2EE"</ff>
@@ -83,41 +72,41 @@ public class RepositoryHelperTest {
               <depends>com.intellij.javaee</depends>
               <rating>00</rating>
               <downloadUrl>plugin.zip</downloadUrl>
-            </idea-plugin>  </category>
-        </plugin-repository>""");
-    assertEquals("Loaded plugins: " + StringUtil.join(list, IdeaPluginDescriptor::getName, ", "), 2, list.size());
+            </idea-plugin>
+          </category>
+        </plugin-repository>"""
+    );
+    assertEquals(2, list.size(), "Loaded plugins: " + list);
   }
 
-  @Test
-  public void testBrokenNotInList() throws IOException {
-    String id = "BrokenPlugin";
-    String version = "1.0";
-    Map<PluginId, Set<String>> brokenPluginsMap = Collections.singletonMap(PluginId.getId(id), Collections.singleton(version));
+  @Test void testBrokenNotInList() throws IOException {
+    var id = "BrokenPlugin";
+    var version = "1.0";
+    var brokenPluginsMap = Map.of(PluginId.getId(id), Set.of(version));
     updateBrokenPlugins(brokenPluginsMap);
 
-    List<PluginNode> list = loadPlugins(
-      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-      "<plugin-repository>\n" +
-      "  <category name=\"Whatever\">\n" +
-      "    <idea-plugin>\n" +
-      "      <id>" + id + "</id>\n" +
-      "      <version>" + version + "</version>\n" +
-      "      <download-url>plugin.zip</download-url>\n" +
-      "    </idea-plugin>\n" +
-      "    <idea-plugin>\n" +
-      "      <id>good.plugin</id>\n" +
-      "      <version>1.0</version>\n" +
-      "      <download-url>plugin.zip</download-url>\n" +
-      "    </idea-plugin>" +
-      "  </category>\n" +
-      "</plugin-repository>");
-    assertEquals("Failed on '" + id + ':' + version + "'", 1, list.size());
+    var list = loadPlugins("""
+        <?xml version="1.0" encoding="UTF-8"?>
+        <plugin-repository>
+          <category name="Whatever">
+            <idea-plugin>
+              <id>%s</id>
+              <version>%s</version>
+              <download-url>plugin.zip</download-url>
+            </idea-plugin>
+            <idea-plugin>
+              <id>good.plugin</id>
+              <version>1.0</version>
+              <download-url>plugin.zip</download-url>
+            </idea-plugin>
+          </category>
+        </plugin-repository>""".formatted(id, version)
+    );
+    assertEquals(1, list.size(), "Failed on '" + id + ':' + version + "'");
   }
 
-  @Test
-  public void testSimpleFormat() throws IOException {
-    List<PluginNode> list = loadPlugins(
-      """
+  @Test void testSimpleFormat() throws IOException {
+    var list = loadPlugins("""
         <plugins>
           <plugin id="my.plugin.1" url="plugin1.zip" version="1.2.3"/>
           <plugin id="my.plugin.2" url="plugin2.jar" version="4.5.6">
@@ -125,62 +114,59 @@ public class RepositoryHelperTest {
             <depends>my.plugin.1</depends>
           </plugin>
           <plugin name="broken"/>
-        </plugins>""");
+        </plugins>"""
+    );
     assertEquals(2, list.size());
   }
 
-  @Test
-  public void testSimpleFormatWithProlog() throws IOException {
-    List<PluginNode> list = loadPlugins(
-      """
+  @Test void testSimpleFormatWithProlog() throws IOException {
+    var list = loadPlugins("""
         <?xml version="1.0" encoding="UTF-8"?>
         <plugins>
           <plugin id="org.jetbrains.kotlin" url="kotlin-plugin-0.9.999.zip" version="0.9.999" />
-        </plugins>
-        """);
+        </plugins>"""
+    );
     assertEquals(1, list.size());
   }
 
-  @Test
-  public void testEqualityById() throws IOException {
-    IdeaPluginDescriptor node1 = loadPlugins("<plugins>\n<plugin id=\"ID\" url=\"plugin.zip\"><name>A</name></plugin>\n</plugins>").get(0);
-    FileUtil.delete(new File(tempDir.getRoot(), "repo.xml"));
-    IdeaPluginDescriptor node2 = loadPlugins("<plugins>\n<plugin id=\"ID\" url=\"plugin.zip\"><name>B</name></plugin>\n</plugins>").get(0);
+  @Test void testEqualityById() throws IOException {
+    var node1 = loadPlugins("<plugins>\n<plugin id=\"ID\" url=\"plugin.zip\"><name>A</name></plugin>\n</plugins>").getFirst();
+    Files.delete(tempDir.resolve("repo.xml"));
+    var node2 = loadPlugins("<plugins>\n<plugin id=\"ID\" url=\"plugin.zip\"><name>B</name></plugin>\n</plugins>").getFirst();
     assertEquals(node1, node2);
     assertEquals(node1.hashCode(), node2.hashCode());
     assertNotEquals(node1.getName(), node2.getName());
   }
 
-  @Test
-  public void testListFiltering() throws IOException {
+  @Test void testListFiltering() throws IOException {
     int current = PluginManagerCore.getBuildNumber().getComponents()[0], next = current + 1;
-    List<PluginNode> list = loadPlugins(
-      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-      "<plugin-repository>\n" +
-      "  <category name=\"Test\">\n" +
-      "    <idea-plugin downloads=\"0\" size=\"1\" date=\"1563793797845\" url=\"\">\n" +
-      "      <name>Test Plugin</name>\n" +
-      "      <id>com.jetbrains.test.plugin</id>\n" +
-      "      <version>0.1</version>\n" +
-      "      <idea-version since-build=\"" + current + ".0\" until-build=\"" + current + ".*\"/>\n" +
-      "      <download-url>plugin.zip</download-url>\n" +
-      "    </idea-plugin>\n" +
-      "    <idea-plugin downloads=\"0\" size=\"1\" date=\"1563793797845\" url=\"\">\n" +
-      "      <name>Test Plugin</name>\n" +
-      "      <id>com.jetbrains.test.plugin</id>\n" +
-      "      <version>0.2</version>\n" +
-      "      <idea-version since-build=\"" + next + ".0\" until-build=\"" + next + ".*\"/>\n" +
-      "      <download-url>plugin.zip</download-url>\n" +
-      "    </idea-plugin>\n" +
-      "  </category>\n" +
-      "</plugin-repository>", BuildNumber.fromString(next + ".100"));
+    var list = loadPlugins("""
+        <?xml version="1.0" encoding="UTF-8"?>
+        <plugin-repository>
+          <category name="Test">
+            <idea-plugin downloads="0" size="1" date="1563793797845" url="">
+              <name>Test Plugin</name>
+              <id>com.jetbrains.test.plugin</id>
+              <version>0.1</version>
+              <idea-version since-build="%d.0" until-build="%d.*"/>
+              <download-url>plugin.zip</download-url>
+            </idea-plugin>
+            <idea-plugin downloads="0" size="1" date="1563793797845" url="">
+              <name>Test Plugin</name>
+              <id>com.jetbrains.test.plugin</id>
+              <version>0.2</version>
+              <idea-version since-build="%d.0" until-build="%d.*"/>
+              <download-url>plugin.zip</download-url>
+            </idea-plugin>
+          </category>
+        </plugin-repository>""".formatted(current, current, next, next), BuildNumber.fromString(next + ".100")
+    );
     assertEquals(1, list.size());
-    assertEquals("0.2", list.get(0).getVersion());
+    assertEquals("0.2", list.getFirst().getVersion());
   }
 
-  @Test
-  public void testListFilteringWithPluginDtoModelBuilder() throws IOException {
-    @Language("XML") String data = """
+  @Test void testListFilteringWithPluginDtoModelBuilder(@TempDir Path tempDir) throws IOException {
+    @Language("XML") var data = """
       <plugins>
         <plugin id="com.jetbrains.test.plugin" url="plugin-253.zip" version="1.0.0-253">
           <idea-version since-build="253" until-build="253.*"/>
@@ -192,28 +178,20 @@ public class RepositoryHelperTest {
           <idea-version since-build="262" until-build="262.*"/>
         </plugin>
       </plugins>""";
-    File tempFile = tempDir.newFile("repo.xml");
-    FileUtil.writeToFile(tempFile, data);
-    String url = tempFile.toURI().toURL().toString();
-    List<PluginUiModel> list = RepositoryHelper.loadPluginModels(
-      url,
-      BuildNumber.fromString("261.100"),
-      null,
-      PluginDtoModelBuilderFactory.INSTANCE
-    );
+    var tempFile = Files.writeString(tempDir.resolve("repo.xml"), data);
+    var url = tempFile.toUri().toURL().toString();
+    var list = RepositoryHelper.loadPluginModels(url, BuildNumber.fromString("261.100"), null, PluginDtoModelBuilderFactory.INSTANCE);
     assertEquals(1, list.size());
     assertEquals("1.0.0-261", list.getFirst().getVersion());
   }
 
-  private @NotNull List<PluginNode> loadPlugins(@Language("XML") @NotNull String data) throws IOException {
+  private List<PluginUiModel> loadPlugins(@Language("XML") String data) throws IOException {
     return loadPlugins(data, null);
   }
 
-  private @NotNull List<PluginNode> loadPlugins(@Language("XML") @NotNull String data,
-                                                @Nullable BuildNumber build) throws IOException {
-    File tempFile = tempDir.newFile("repo.xml");
-    FileUtil.writeToFile(tempFile, data);
-    String url = tempFile.toURI().toURL().toString();
-    return RepositoryHelper.loadPlugins(url, build, null);
+  private List<PluginUiModel> loadPlugins(@Language("XML") String data, @Nullable BuildNumber build) throws IOException {
+    var tempFile = Files.writeString(tempDir.resolve("repo.xml"), data);
+    var url = tempFile.toUri().toURL().toString();
+    return RepositoryHelper.loadPluginModels(url, build, null);
   }
 }
